Fix a few layout issues

--- a/components/main/Products/ProductReviewForm.module.css
+++ b/components/main/Products/ProductReviewForm.module.css
@@ -1,3 +1,16 @@
+.review__container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex: 1;
+}
+.reviews {
+    /* flex: 1; */
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 200px);
+}
+
 .details {
   display: flex;
   flex-direction: column;
